fix-add-input-gap

--- a/src/scss/core/_Form.scss
+++ b/src/scss/core/_Form.scss
@@ -68,6 +68,7 @@ input[type="radio"] {
 
 .mg-input {
   display: inline-flex;
+  gap: 0.5rem;
   align-items: center;
   margin-bottom: 1.5rem;
 }
